--- a/css/style.css
+++ b/css/style.css
@@ -8,44 +8,43 @@
 
 /* # UTILS */
 
-.wrapper {
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
-
-/* ************************************ */
-
-.top {
+.container {
   display: flex;
-  width: 100%;
-  height: calc(100% - 100px);
-  background-color: grey;
+  height: calc(100vh - 120px);
 }
 
 .nav-bar {
+  display: flex;
   flex-direction: column;
   width: 200px;
   height: 100%;
 
-  background-color: #000000;
+  background-color: black;
 }
 
 .main-section {
+  display: flex;
   flex-direction: column;
   width: calc(100% - 200px);
-
-  background-color: grey;
-}
-
-.footer-app {
-  width: 100%;
-  height: 100px;
-  background-color: #282828;
 }
 
 .header-app {
   height: 80px;
   width: 100%;
-  background-color: #0c0f14;
+
+  background-color: #2e2e2e;
+}
+
+.main-content {
+  display: flex;
+  flex: 1 1 100%;
+
+  background-color: #1c1c2c;
+}
+
+.footer {
+  height: 120px;
+  width: 100%;
+
+  background-color: #2e2e2e;
 }
