--- a/css/style.css
+++ b/css/style.css
@@ -95,11 +95,6 @@ span {
 }
 
 .footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
   height: 120px;
   width: 100%;
 
@@ -267,8 +262,40 @@ span {
 
 .bar-button-co {
   display: flex;
-  justify-content: flex-end;
+  justify-content: end;
   align-items: center;
+}
+
+.bar-button-co > .progress-bar {
+  flex-grow: 1;
+  max-width: 100px;
+  min-width: 50px;
+
+  height: 4px;
+  border-radius: 2px;
+  background-color: gray;
+}
+
+.bar-button-co .player-item {
+  width: 30px;
+  height: 30px;
+  font-size: 15px;
+
+  cursor: pointer;
+  background-color: transparent;
+  color: white;
+  border: none;
+}
+
+.image-player-co {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.img-player {
+  max-width: 100px;
+  min-width: 50px;
 }
 
 /* HOVER */
